# bourdon

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE_FAQ.md  README.md  RELEASE.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.10.1.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.1.md  SECURITY.md  pyproject.toml  wrangler.toml
.github/workflows/: release.yml
BENCHMARKS/: latency_matrix.md  methodology.md
BENCHMARKS/prompts/: recognition_v1.txt
Formula/: bourdon.rb
adapters/: __init__.py  _cursor_sqlite.py  _windsurf_native.py  base.py  cascade.py  claude_code.py  claude_code_automations.py  codex.py  codex_automations.py  copilot.py  cursor.py  cursor_automations.py
cli/: demo.py  dogfood.py  main.py  setup.py
config/: peers.example.yaml
core/: agents_export.py  cascade_turn_compiler.py  claude_turn_compiler.py  codex_turn_compiler.py  cursor_turn_compiler.py  federation_audit.py  federation_registry.py  federation_staging.py  improve_backlog.py  inference_protocol.py  l5_io.py  l6_remote.py  l6_server.py  l6_store.py  sync.py  text_safety.py  turn_compiler.py
docs/: AUTHORING_AN_ADAPTER.md  AUTHORING_A_PARTICIPANT.md  CASCADE_TURN_COMPILER.md  PROOF.md  PROOF_CASCADE.md  RELEASE_PROCESS.md  agent-integration-status.md  cascade-turn-compiler.md  claude-turn-compiler.md  codex-memory-metrics.md  codex-pre-turn-dogfood.md  codex-turn-compiler.md  cursor-parity-scope.md  development-workflow.md  quickstart.md  remote-setup.md  screencast-script.md  security-model.md  turn-compiler-architecture.md  v0.6-status-and-recovery.md
docs/integrations/: claude-code-automations.md  claude-code.md  claude-desktop.md  cursor-automations.md  cursor.md  openclaw.md  openmanus.md
examples/: routine-prompt-template.md
examples/github-actions/: claude-code-bourdon-federation.yml
homebrew/: README.md
participants/: __init__.py  _claude_desktop.py  _cursor_sqlite.py  _windsurf_native.py  base.py  cascade.py  cascade_automations.py  claude_code.py  claude_code_automations.py  claude_desktop_code.py  claude_desktop_cowork.py  codex.py  codex_automations.py  copilot.py  copilot_automations.py  copilot_cli.py  copilot_vscode.py  cursor.py  cursor_automations.py  llama_cpp_backend.py  openclaw.py
plans/: 001-improve-backlog-adapter.md  README.md
scripts/: automation-memory-append.sh  codex_memory_metrics.py  cursor-automation-memory-append.sh  latency_harness.py  mcp_smoke_test.py
spec/: ADAPTER_CONTRACT.md  ARCHITECTURE_v0.1.md  FINDINGS_JOURNAL.md  L5_schema.json  PARTICIPANT_CONTRACT.md  POSITIONING.md  README.md  RELATED_WORK.md  SPEC_v0.9.0.md  USE_CASES.md
spec/launch_drafts/: LAUNCH_CHECKLIST.md  hn_show.md  twitter_thread.md
starter-template/: README.md
tests/: conftest.py  test_adapter_base.py  test_agents_cli.py  test_agents_export.py  test_cascade_adapter.py  test_cascade_automations.py  test_cascade_participant.py  test_cascade_turn_compiler.py  test_claude_code_adapter.py  test_claude_code_automations_adapter.py  test_claude_code_automations_participant.py  test_claude_code_participant.py  test_claude_desktop_code_participant.py  test_claude_desktop_cowork_participant.py  test_claude_turn_compiler.py  test_cli.py  test_cli_dogfood.py  test_codex_adapter.py  test_codex_automations_adapter.py  test_codex_automations_participant.py  test_codex_memory_metrics.py  test_codex_participant.py  test_codex_sync_native_federation.py  test_codex_turn_compiler.py  test_copilot_adapter.py  test_copilot_automations.py  test_copilot_cli.py  test_copilot_participant.py  test_copilot_vscode.py  test_cursor_adapter.py  test_cursor_automations_adapter.py  test_cursor_automations_participant.py  test_cursor_participant.py  test_demo.py  test_docs.py  test_federation_audit.py  test_federation_cli.py  test_federation_registry.py  test_federation_roundtrip.py  test_federation_tiers.py  (+14 more)
tests/integration/: test_llama_cpp_live.py
tray/: .gitignore  BUILD_NOTES.md  LICENSE  README.md  package.json
tray/src/: index.html  main.js  styles.css
tray/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tray/src-tauri/capabilities/: default.json
tray/src-tauri/icons/: generate_icons.py
tray/src-tauri/icons/agents/: NOTICE.md
tray/src-tauri/src/: lib.rs  main.rs
web/: index.html  privacy.html
