[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bourdon"
version = "0.8.0"
description = "Recognition-first runtime + agent federation memory for human-AI collaboration"
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
authors = [
    { name = "Ryan Davis", email = "ryandavispro1@gmail.com" },
]
maintainers = [
    { name = "RADLAB LLC" },
]
keywords = [
    "ai",
    "memory",
    "agent",
    "federation",
    "mcp",
    "rag",
    "cognition",
    "llm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# L2 episodic memory via UltraRAG / any MCP retriever.
# Optional because L0+L1 work standalone; L2 only activates when enabled.
ultrarag = [
    "fastmcp>=2.0",
]
# L6 federation MCP server. Required to run `python -m core.l6_server`
# and expose the agent-library via the Model Context Protocol.
server = [
    "fastmcp>=2.0",
]
# llama.cpp inference backend (participants/llama_cpp_backend.py).
# Optional because not every Bourdon user runs local inference; the
# Protocol surface in core/inference_protocol.py has no httpx dependency.
llama-cpp = [
    "httpx>=0.27",
]
# Phase 1.5 latency-harness: drives provider APIs for recognition-latency
# benchmarks. Optional because most Bourdon installs do not run benchmarks.
bench = [
    "openai>=1.50",
    "anthropic>=0.40",
    "httpx>=0.27",
]
# Phase 1.6 peer L6 federation: cross-machine federation over Tailscale/HTTP.
# Required to use `bourdon serve --peer URL` or `peers.yaml` config.
# Pulls in the MCP streamable-HTTP client (already shipped with the [server]
# extras) and uvicorn for hosting the authenticated HTTP transport.
federation = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
]

# Entry points for participant plugins.
# Third-party participants register here via their own pyproject.toml.
[project.entry-points."bourdon.participants"]
claude-code = "participants.claude_code:ClaudeCodeParticipant"
claude-code-automations = "participants.claude_code_automations:ClaudeCodeAutomationsParticipant"
codex = "participants.codex:CodexParticipant"
codex-automations = "participants.codex_automations:CodexAutomationsParticipant"
cursor = "participants.cursor:CursorParticipant"
copilot = "participants.copilot:CopilotParticipant"
cascade = "participants.cascade:CascadeParticipant"
cascade-automations = "participants.cascade_automations:CascadeAutomationsParticipant"
# clyde = "participants.clyde:ClydeParticipant"     # native publisher lives in ~/.clyde/, not here
# clair = "participants.clair:ClairParticipant"     # same pattern -- native publisher

[project.scripts]
bourdon = "cli.main:main"

[project.urls]
Homepage = "https://bourdon.ai"
Repository = "https://github.com/getbourdon/bourdon"
Issues = "https://github.com/getbourdon/bourdon/issues"
Documentation = "https://bourdon.ai/docs"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "participants*", "cli*"]
exclude = ["tests*", "docs*", "spec*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live tests requiring an external service (e.g. llama-server). Skipped in CI by default; run locally with `pytest -m integration`.",
]
